Welcome Rene Ladan (rene) as the new core team secretary
And we thank Sergio Carlavilla Delgado (carlavilla) for his service over
the past two years.

Approved by:	core

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -174,7 +174,7 @@ Email sent to Vendor Relations is forwarded to the FreeBSD Core Team in addition
 The FreeBSD Core Team Secretary is a non-voting member of the Core Team, responsible for documenting the work done by core, keeping track of the core agenda, contacting non-core members on behalf of core, sending mail to core, and interfacing with the admin team for committer/account approval.
 The Core Team Secretary is also responsible for writing and sending out monthly status reports to the FreeBSD Developer community, containing a summary of core's latest decisions and actions.
 
-* {carlavilla}
+* {rene}
 
 [[t-doceng-secretary]]
 == Documentation Engineering Team Secretary <doceng-secretary@FreeBSD.org>
