bylaw: Update the information of the next core election
Approved by:	core

--- a/website/content/en/internal/bylaws.adoc
+++ b/website/content/en/internal/bylaws.adoc
@@ -25,7 +25,7 @@ These bylaws were approved by a vote of active committers on August 28, 2000.
 
 == Additional Information
 
-The last core election was held in May of 2022. The next core election is scheduled for May-June of 2024.
+The last core election was held in May-June of 2024. The next core election is scheduled for May-June of 2026.
 
 == Core Interpretations of the Bylaws
 
