dev-model: Update core secretary
Approved by:	core

--- a/documentation/content/en/books/dev-model/_index.adoc
+++ b/documentation/content/en/books/dev-model/_index.adoc
@@ -597,7 +597,7 @@ Hat currently held by: Garrett Wollman mailto:wollman@FreeBSD.org[wollman@FreeBS
 The Core Secretary's main responsibility is to write drafts to and publish the final Core Reports.
 The secretary also keeps the core agenda, thus ensuring that no balls are dropped unresolved.
 
-Hat currently held by: {carlavilla}.
+Hat currently held by: {rene}.
 
 [[role-bugmeister]]
 ==== Bugmeister
