core-alumni: Record outgoing core.12 members
Approved by:	core

--- a/shared/contrib-corealumni.adoc
+++ b/shared/contrib-corealumni.adoc
@@ -1,15 +1,18 @@
 
+* {0mp} (2022 - 2024)
+* {manu} (2022 - 2024)
+* {bcr} (2016 - 2020, 2022 - 2024)
+* {bapt} (2016 - 2018, 2020 - 2024)
+* {emaste} (2016 - 2018, 2020 - 2024)
+* {jhb} (2002 - 2006, 2010 - 2014, 2016 - 2020, 2022 - 2024)
+* {grog} (2000 - 2004, 2022 - 2024)
 * {markj} (2020 - 2022)
 * {kevans} (2020 - 2022)
 * {seanc} (2018 - 2022)
 * {kmoore} (2016 - 2020)
-* {jhb} (2002 - 2006, 2010 - 2014, 2016 - 2020)
 * {jeff} (2018 - 2020)
 * {brooks} (2006 - 2012, 2018 - 2020)
-* {bcr} (2016 - 2020)
 * {allanjude} (2016 - 2020)
-* {bapt} (2016 - 2018, 2020 - 2022)
-* {emaste} (2016 - 2018, 2020 - 2022)
 * {gnn} (2006 - 2010, 2016 - 2018, 2020 - 2022)
 * {hrs} (2006 - 2022)
 * {benno} (2016 - 2018)
@@ -30,7 +33,6 @@
 * {markm} (2002 - 2006)
 * {kuriyama} (2002 - 2006)
 * {scottl} (2004 - 2005, 2020 - 2022)
-* {grog} (2000 - 2004)
 * {dg} (1992 - 2002)
 * {dfr} (1999 - 2002)
 * {msmith} (2000 - 2002)
