handbook: Update the latest core election date
Approved by:	core

--- a/documentation/content/en/books/handbook/introduction/_index.adoc
+++ b/documentation/content/en/books/handbook/introduction/_index.adoc
@@ -197,7 +197,7 @@ The FreeBSD core team[[development-core]]::
 The _FreeBSD core team_ would be equivalent to the board of directors if the FreeBSD Project were a company.
 The primary task of the core team is to make sure the project, as a whole, is in good shape and is heading in the right directions.
 Inviting dedicated and responsible developers to join our group of committers is one of the functions of the core team, as is the recruitment of new core team members as others move on.
-The current core team was elected from a pool of committer candidates in May 2022.
+The current core team was elected from a pool of committer candidates in May and June 2024.
 Elections are held every 2 years.
 +
 [NOTE]
