gpgkeys: Update core.13 members
Approved by:	core

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -75,29 +75,29 @@ include::{include-path}doceng-secretary.key[]
 [[pgpkeys-core]]
 == Core Team Members
 
-=== `{bapt}`
-include::{include-path}bapt.key[]
+=== `{allanjude}`
+include::{include-path}allanjude.key[]
 
-=== `{bcr}`
-include::{include-path}bcr.key[]
+=== `{dch}`
+include::{include-path}dch.key[]
 
-=== `{grog}`
-include::{include-path}grog.key[]
+=== `{glebius}`
+include::{include-path}glebius.key[]
 
-=== `{jhb}`
-include::{include-path}jhb.key[]
+=== `{hrs}`
+include::{include-path}hrs.key[]
 
 === `{lwhsu}`
 include::{include-path}lwhsu.key[]
 
-=== `{manu}`
-include::{include-path}manu.key[]
+=== `{mat}`
+include::{include-path}mat.key[]
+
+=== `{olivier}`
+include::{include-path}olivier.key[]
 
 === `{tcberner}`
 include::{include-path}tcberner.key[]
-
-=== `{0mp}`
-include::{include-path}0mp.key[]
 
 [[pgpkeys-developers]]
 == Developers
