Fix link to FreeBSD-EN-24:13.libc++ in release notes
Hugo requires "++" to be spelled "{plus}{plus}".

Reported by:	Christos Longros

--- a/website/content/en/releases/14.1R/errata.adoc
+++ b/website/content/en/releases/14.1R/errata.adoc
@@ -56,7 +56,7 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |===
 |Errata |Date |Topic
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:10.zfs.asc[FreeBSD-EN-24:10.zfs] |19 June 2024 |Kernel memory leak in ZFS
-|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:13.libc++.asc[FreeBSD-EN-24:13.libc++] |19 June 2024 |Incorrect size passed to heap allocated std::string delete
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:13.libc{plus}{plus}.asc[FreeBSD-EN-24:13.libc{plus}{plus}] |19 June 2024 |Incorrect size passed to heap allocated std::string delete
 |===
 
 [[open-issues]]
