--- a/documentation/content/en/books/handbook/dtrace/_index.po
+++ b/documentation/content/en/books/handbook/dtrace/_index.po
@@ -73,8 +73,8 @@ msgid ""
 "experimental support for userland DTrace.  Userland DTrace allows users to "
 "perform function boundary tracing for userland programs using the `pid` "
 "provider, and to insert static probes into userland programs for later "
-"tracing.  Some ports, such as package:databases/postgresql12-server[] and "
-"package:lang/php74[] have a DTrace option to enable static probes."
+"tracing.  Some ports, such as package:databases/memcached[] and "
+"package:net-mgmt/lldpd[] have a DTrace option to enable static probes."
 msgstr ""
 
 #. type: Plain text
