--- a/documentation/content/pl/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/pl/books/handbook/dtrace/_index.adoc
@@ -53,7 +53,7 @@ DTrace, also known as Dynamic Tracing, was developed by Sun(TM) as a tool for lo
 
 DTrace is a remarkable profiling tool, with an impressive array of features for diagnosing system issues. It may also be used to run pre-written scripts to take advantage of its capabilities. Users can author their own utilities using the DTrace D Language, allowing them to customize their profiling based on specific needs.
 
-The FreeBSD implementation provides full support for kernel DTrace and experimental support for userland DTrace. Userland DTrace allows users to perform function boundary tracing for userland programs using the `pid` provider, and to insert static probes into userland programs for later tracing. Some ports, such as package:databases/postgresql12-server[] and package:lang/php74[] have a DTrace option to enable static probes.
+The FreeBSD implementation provides full support for kernel DTrace and experimental support for userland DTrace. Userland DTrace allows users to perform function boundary tracing for userland programs using the `pid` provider, and to insert static probes into userland programs for later tracing. Some ports, such as package:databases/memcached[] and package:net-mgmt/lldpd[] have a DTrace option to enable static probes.
 
 The official guide to DTrace is maintained by the Illumos project at http://dtrace.org/guide[DTrace Guide].
 
