--- a/documentation/content/en/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/en/books/handbook/dtrace/_index.adoc
@@ -60,7 +60,7 @@ Users can author their own utilities using the DTrace D Language, allowing them 
 
 The FreeBSD implementation provides full support for kernel DTrace and experimental support for userland DTrace.
 Userland DTrace allows users to perform function boundary tracing for userland programs using the `pid` provider, and to insert static probes into userland programs for later tracing.
-Some ports, such as package:databases/postgresql12-server[] and package:lang/php74[] have a DTrace option to enable static probes.
+Some ports, such as package:databases/memcached[] and package:net-mgmt/lldpd[] have a DTrace option to enable static probes.
 
 The official guide to DTrace is maintained by the Illumos project at http://dtrace.org/guide[DTrace Guide].
 
