handbook/dtrace: Fix semi-broken link to DTrace site

--- a/documentation/content/en/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/en/books/handbook/dtrace/_index.adoc
@@ -151,7 +151,7 @@ Not all of the scripts found in the DTrace Toolkit will work as-is on FreeBSD an
 The DTrace Toolkit includes many scripts in the special language of DTrace.
 This language is called the D language and it is very similar to C++.
 An in depth discussion of the language is beyond the scope of this document.
-It is covered extensively in the http://www.dtrace.org/guide[Illumos Dynamic Tracing Guide].
+It is covered extensively in the http://dtrace.org/guide[Illumos Dynamic Tracing Guide].
 
 [[dtrace-out-of-kernel]]
 == Enabling DTrace in Out-of-Kernel Modules
