--- a/documentation/content/pl/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/pl/books/handbook/dtrace/_index.adoc
@@ -119,7 +119,7 @@ Finally, install the current DTrace Toolkit, a collection of ready-made scripts 
 The scripts found in [.filename]#/usr/shared/dtrace# have been specifically ported to FreeBSD. Not all of the scripts found in the DTrace Toolkit will work as-is on FreeBSD and some scripts may require some effort in order for them to work on FreeBSD.
 ====
 
-The DTrace Toolkit includes many scripts in the special language of DTrace. This language is called the D language and it is very similar to C++. An in depth discussion of the language is beyond the scope of this document. It is covered extensively in the http://www.dtrace.org/guide[Illumos Dynamic Tracing Guide].
+The DTrace Toolkit includes many scripts in the special language of DTrace. This language is called the D language and it is very similar to C++. An in depth discussion of the language is beyond the scope of this document. It is covered extensively in the http://dtrace.org/guide[Illumos Dynamic Tracing Guide].
 
 [[dtrace-using]]
 == Using DTrace
