--- a/documentation/content/pt-br/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/pt-br/books/handbook/dtrace/_index.adoc
@@ -119,7 +119,7 @@ Por fim, instale o DTrace Toolkit atual, uma coleção de scripts prontos para c
 Os scripts encontrados em [.filename]#/usr/shared/dtrace# foram especificamente portados para o FreeBSD. Nem todos os scripts encontrados no DTrace Toolkit funcionarão no FreeBSD e alguns scripts podem exigir algum esforço para que funcionem no FreeBSD.
 ====
 
-O DTrace Toolkit inclui muitos scripts no idioma especial do DTrace. Esta linguagem é chamada de linguagem D e é muito semelhante ao C++. Uma discussão aprofundada da linguagem está além do escopo deste documento. Ele é abordado extensivamente no http://www.dtrace.org/guide[Illumos Dynamic Tracing Guide].
+O DTrace Toolkit inclui muitos scripts no idioma especial do DTrace. Esta linguagem é chamada de linguagem D e é muito semelhante ao C++. Uma discussão aprofundada da linguagem está além do escopo deste documento. Ele é abordado extensivamente no http://dtrace.org/guide[Illumos Dynamic Tracing Guide].
 
 [[dtrace-using]]
 == Usando o DTrace
