--- a/documentation/content/zh-tw/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/zh-tw/books/handbook/dtrace/_index.adoc
@@ -152,7 +152,7 @@ FreeBSD 10 將其中一些腳本安裝在 [.filename]#/usr/share/dtrace# 中。
 DTrace 工具箱包含許多使用 DTrace 特殊語言的腳本，
 這種語言被稱為 D 語言，它與 C++ 非常類似，
 對於該語言的深度討論超出了此文件的範圍，
-他在 http://www.dtrace.org/guide[Illumos Dynamic Tracing Guide] 有廣泛的介紹。
+他在 http://dtrace.org/guide[Illumos Dynamic Tracing Guide] 有廣泛的介紹。
 
 [[dtrace-using]]
 == 使用 DTrace
