Fix typo: s|Passwork|Password|

--- a/documentation/content/en/books/handbook/network/_index.adoc
+++ b/documentation/content/en/books/handbook/network/_index.adoc
@@ -706,7 +706,7 @@ network={
 
 <.> SSID scan technique. Only need to use this option if the network is hidden.
 <.> Network name.
-<.> Passwork of the wireless network.
+<.> Password of the wireless network.
 
 The next step will be to configure the wireless connection in the file [.filename]#/etc/rc.conf#.
 
