Status/2024Q2/zcond.adoc: a typo fixed

--- a/website/content/en/status/report-2024-04-2024-06/zcond.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/zcond.adoc
@@ -27,7 +27,7 @@ Great care has to be given to security, because kernel instructions are overwrit
 More details and some implementation ideas can be found in the project proposal on the link:https://wiki.freebsd.org/SummerOfCode2024Projects/ZeroCostConditionalExecutionMechanism[project wiki page].
 More documents describing the implementation and design decisions will be produced, as the project moves along.
 
-The goal of the project is to produce a working implementaion of the mechanism for the x86-64 architecture.
+The goal of the project is to produce a working implementation of the mechanism for the x86-64 architecture.
 It will then be applied to an existing piece of kernel code and benchmarked.
 If the benchmark results come out positive, it will be ported to other architectures.
 
