core-2024Q2: rephrase the section about Mike Karels to read less formal.
Reviewed by:	core

--- a/website/content/en/status/report-2024-04-2024-06/core.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/core.adoc
@@ -9,9 +9,11 @@ The FreeBSD Core Team is the governing body of FreeBSD.
 The Core Team has presented the status update at the DevSummit 202405.
 Details are available at link:https://wiki.freebsd.org/DevSummit/202405[]
 
-==== Demise of Mike Karels
+==== Passing of Mike Karels
 
-The FreeBSD Core Team would like to thank Mike Karels for his years of service and convey our sincere condolences on the passing of him.
+It is with a heavy heart that we have learned of Mike Karels' recent passing.
+We want to offer our sincere condolences to his family, friends, and the community for this loss.
+Mike was an inspiring fellow developer and will be sorely missed.
 
     link:https://lists.freebsd.org/archives/freebsd-announce/2024-June/000135.html[In Memory of Mike Karels].
 
