core-2024Q2: English fix
See e.g. https://langeek.co/en/grammar/course/1273/inspiring-vs-inspirational

--- a/website/content/en/status/report-2024-04-2024-06/core.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/core.adoc
@@ -13,7 +13,7 @@ Details are available at link:https://wiki.freebsd.org/DevSummit/202405[]
 
 It is with a heavy heart that we have learned of Mike Karels' recent passing.
 We want to offer our sincere condolences to his family, friends, and the community for this loss.
-Mike was an inspiring fellow developer and will be sorely missed.
+Mike was an inspirational fellow developer and will be sorely missed.
 
     link:https://lists.freebsd.org/archives/freebsd-announce/2024-June/000135.html[In Memory of Mike Karels].
 
