handbook: security: Reword OpenSSH description
We do not want the reader to think that the base system OpenSSH version
might be less secure than security/openssh-portable due to less frequent
updates.

--- a/documentation/content/en/books/handbook/security/_index.adoc
+++ b/documentation/content/en/books/handbook/security/_index.adoc
@@ -684,7 +684,7 @@ It then describes how to configure a SSH server on a FreeBSD system.
 [TIP]
 ====
 As stated, this chapter will cover the base system version of OpenSSH.
-A version of OpenSSH is also available in the package:security/openssh-portable[], which provides additional configuration options and is updated more regularly.
+A version of OpenSSH is also available in the package:security/openssh-portable[], which provides additional configuration options and is updated with new features more regularly.
 ====
 
 === Using the SSH Client Utilities
