There is only one method to install the ports tree so make this singular

--- a/documentation/content/en/books/handbook/ports/_index.adoc
+++ b/documentation/content/en/books/handbook/ports/_index.adoc
@@ -669,7 +669,7 @@ The extract portion of building a port will automatically save the downloaded so
 === Installing the Ports Collection
 
 Before an application can be compiled using a port, the Ports Collection must first be installed.
-If it was not installed during the installation of FreeBSD, use one of the following methods to install it:
+If it was not installed during the installation of FreeBSD, use the following method to install it:
 
 [[ports-using-git-method]]
 [.procedure]
