New committer (src): Osama Abboud ( osamaabb )
Completed steps 1-4 from Committer's Guide.

Approved by:   cperciva (mentor)

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -2576,6 +2576,10 @@
 :osa-email: osa@FreeBSD.org
 :osa: {osa-name} <{osa-email}>
 
+:osamaabb-name: Osama Abboud
+:osamaabb-email: osamaabb@FreeBSD.org
+:osamaabb: {osamaabb-name} <{osamaabb-email}>
+
 :oshogbo-name: Mariusz Zaborski
 :oshogbo-email: oshogbo@FreeBSD.org
 :oshogbo: {oshogbo-name} <{oshogbo-email}>
