--- a/website/content/en/releases/13.4R/schedule.adoc
+++ b/website/content/en/releases/13.4R/schedule.adoc
@@ -31,8 +31,8 @@ General discussions about the pending release and known issues should be sent to
 |===
 |Action |Expected |Actual |Description
 |Initial release schedule announcement |- |25 June 2024|Release Engineers send announcement email to developers with a rough schedule.
-|Release schedule reminder |8 July 2024 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
-|Code slush begins |19 July 2024 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|Release schedule reminder |8 July 2024 |8 July 2024 |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Code slush begins |19 July 2024 |20 July 2024 |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
 |{localBranchReleng} branch |2 August 2024 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |2 August 2024 |- |First beta test snapshot.
 |BETA2 builds begin |9 August 2024 |- |Second beta test snapshot.
